# abstract_ui

./: .gitignore  CMakeLists.txt  README.md  automation_config.sh  build.sh  build_config.sh  dependencies.sh  deps_config.sh  deps_scenario.sh  external_config.sh  file_utils.sh  get_dependencies.sh  git_init.sh  input.sh  log.sh  os.sh  pre_build.sh  update_cmake_modules.sh  update_scripts.sh
cmake_modules/: compile.cmake  deps.cmake  includes.cmake  module.cmake  modules.cmake  src.cmake
docs/: .gitignore  collect_sources.sh  doxyfile.txt  gen_doc.bat  gen_doc.sh
include/abstract_ui/: app.h  entity.h  final.h  fwd.h  menu_controller.h  menu_manager.h  node.h  view_controller.h  widget.h  widget_factory.h  window.h  window_controller.h
include/abstract_ui/final/: fwd.h  node.h  widget.h  window.h
include/abstract_ui/final/widgets/: dialog.h  menu.h  menu_bar.h  menu_list_base.h
include/abstract_ui/helpers/: user_input.h
include/abstract_ui/imgui/: widget_factory.h  window.h
include/abstract_ui/imgui/widgets/: button.h  dialog.h  label.h  slider_float.h  text.h  variants.h
include/abstract_ui/imgui/widgets/dialogs/: dialog_input_text.h  dialog_message.h  dialog_yes_no.h
include/abstract_ui/qt/: fwd.h  import_qml_plugins.h  widget_factory.h
include/abstract_ui/qt/widgets/: button.h  text.h  text_input.h
include/abstract_ui/qt/widgets/dialogs/: dialog_message.h  dialog_yes_no.h
include/abstract_ui/widgets/: button.h  clickable_item.h  dialog.h  image.h  label.h  layout.h  menu.h  menu_bar.h  menu_item.h  menu_list.h  menu_list_base.h  text.h  text_input.h  value_input.h
include/abstract_ui/widgets/dialogs/: dialog_input_text.h  dialog_message.h  dialog_with_buttons.h  dialog_yes_no.h  modal_dialog.h
include/abstract_ui/widgets/layouts/: auto_layout.h  horizontal_layout.h  vertical_layout.h
qt/: CMakeLists.txt
qt/cmake_modules/: build_directory.cmake  deps.cmake  inherit_parent.cmake  modules.cmake  src.cmake
qt/imports/: CMakeLists.txt
qt/imports/abstract_ui/: AutoLayout.qml  Button.qml  CMakeLists.txt  Constants.qml  Dialog.qml  HorizontalLayout.qml  Image.qml  Label.qml  Menu.qml  MenuBar.qml  MenuItem.qml  MenuList.qml  Text.qml  TextInput.qml  ToolButton.qml  VerticalLayout.qml  Widget.qml  qmldir
qt/imports/abstract_ui/designer/: plugin.metainfo
qt/include/abstract_ui/qt/: app.h  common.h  fwd.h  import_qml_plugins.h  node.h  register_widgets.h  widget.h  widget_factory.h  widget_model.h  window.h
qt/include/abstract_ui/qt/widgets/: button.h  button_model.h  clickable_item.h  clickable_item_model.h  dialog.h  image.h  label.h  menu.h  menu_bar.h  menu_item.h  menu_list.h  menu_list_model.h  text.h  text_input.h  text_input_model.h  tool_button.h
qt/include/abstract_ui/qt/widgets/dialogs/: dialog_input_text.h  dialog_message.h  dialog_with_buttons.h  dialog_yes_no.h
qt/include/abstract_ui/qt/widgets/layouts/: auto_layout.h  horizontal_layout.h  vertical_layout.h
qt/src/: app.cpp  node.cpp  widget.cpp  widget_factory.cpp
qt/src/widgets/: button.cpp  button_model.cpp  clickable_item.cpp  clickable_item_model.cpp  dialog.cpp  image.cpp  label.cpp  menu.cpp  menu_bar.cpp  menu_item.cpp  menu_list.cpp  text.cpp  text_input.cpp  text_input_model.cpp  tool_button.cpp  widget_model.cpp
qt/src/widgets/dialogs/: dialog_input_text.cpp  dialog_message.cpp  dialog_with_buttons.cpp  dialog_yes_no.cpp
qt/src/widgets/layouts/: auto_layout.cpp  horizontal_layout.cpp  vertical_layout.cpp
sdl_imgui/: CMakeLists.txt  deps_scenario.sh
sdl_imgui/cmake_modules/: CMakeLists.txt  build_directory.cmake  group.cmake  includes.cmake  log.cmake  module.cmake  modules.cmake  platforms.cmake  qt.cmake
sdl_imgui/include/abstract_ui/imgui/: app.h  common.h  fwd.h  node.h  register_widgets.h  sdl_app.h  sdl_node.h  widget.h  widget_factory.h  window.h
sdl_imgui/include/abstract_ui/imgui/widgets/: add.h  add_typed.h  button.h  combo_box.h  dialog.h  image.h  label.h  list_box.h  menu.h  menu_bar.h  menu_item.h  menu_list.h  text.h  text_input.h
sdl_imgui/include/abstract_ui/imgui/widgets/dialogs/: dialog_input_text.h  dialog_yes_no.h
sdl_imgui/include/abstract_ui/imgui/widgets/layouts/: auto_layout.h  horizontal_layout.h  vertical_layout.h
sdl_imgui/include/abstract_ui/sdl_imgui/: widget.h
sdl_imgui/include/abstract_ui/sdl_imgui/widgets/: add_typed.h  button.h  changes_save.h  collapsable_section.h  float_input.h  text_input.h
sdl_imgui/include/abstract_ui/sdl_imgui/widgets/dialogs/: dialog_message.h  dialog_with_buttons.h
sdl_imgui/src/: app.cpp  node.cpp  sdl_app.cpp  sdl_node.cpp  widget.cpp  widget_factory.cpp  window.cpp
sdl_imgui/src/widgets/: button.cpp  dialog.cpp  image.cpp  image_SDL_image.cpp  label.cpp  menu.cpp  menu_bar.cpp  menu_item.cpp  menu_list.cpp  text.cpp  text_input.cpp  vertical_layout.cpp
sdl_imgui/src/widgets/dialogs/: dialog_input_text.cpp  dialog_message.cpp  dialog_with_buttons.cpp  dialog_yes_no.cpp
sdl_imgui/src/widgets/layouts/: horizontal_layout.cpp
src/: app.cpp  menu_controller.cpp  menu_manager.cpp  node.cpp  view_controller.cpp  widget_factory.cpp  window_controller.cpp
src/final/widgets/: dialog.cpp
src/helpers/: user_input.cpp
src/widgets/: menu.cpp  menu_list_base.cpp
src/widgets/layouts/: auto_layout.cpp
